k8s/staging/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: paylink-staging
  labels:
    name: paylink-staging
    environment: staging
