k8s/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paylink-system-staging
  namespace: paylink-staging
  labels:
    app: paylink-system
    environment: staging
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: paylink-system
      environment: staging
  template:
    metadata:
      labels:
        app: paylink-system
        environment: staging
    spec:
      containers:
      - name: paylink-system
        image: paylink-system-staging:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: gcp-credentials
          mountPath: /var/secrets/google
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "768Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /paylink/actuator/health/liveness
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /paylink/actuator/health/readiness
            port: 8080
          initialDelaySeconds: 150
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
      volumes:
      - name: gcp-credentials
        secret:
          secretName: paylink-system-staging-secret
          items:
          - key: GCP_CREDENTIALS
            path: gcp-credentials.json
      restartPolicy: Always
